--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
 ### Node ###
-.env
+# Logs
 logs
 *.log
 npm-debug.log*
@@ -32,7 +32,6 @@ coverage
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
-
 
 # Bower dependency directory (https://bower.io/)
 bower_components
