--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.17.1",
     "nodemailer": "^6.10.0",
+    "serverless-http": "^3.2.0",
     "socket": "^0.14.77",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
